1. Collection API Улучшения[#163060]